// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`component ProsemirrorRender > renders marks in order 1`] = `
"<div>
  <p><b data-test=\\"bold\\"><i data-test=\\"italic\\">content</i></b></p>
</div>"
`;

exports[`component ProsemirrorRender > renders mixed text and marks 1`] = `
"<div>
  <h2>Simple</h2>
  <p data-test=\\"paragraph\\">This is a <strong>basic</strong> example.</p>
</div>"
`;

exports[`component ProsemirrorRender > renders simple mark 1`] = `
"<div data-test=\\"doc\\">
  <p data-test=\\"paragraph\\"><b data-test=\\"bold\\">content</b></p>
</div>"
`;

exports[`component ProsemirrorRender > renders simple node 1`] = `
"<div data-test=\\"doc\\">
  <p data-test=\\"paragraph\\">content</p>
</div>"
`;

exports[`component ProsemirrorRender > skip types when set to false 1`] = `
"<div>
  <!-- prosemirror type 'script' skipped -->
</div>"
`;

exports[`component ProsemirrorRender > skip unknown types when skipUnknown option set 1`] = `
"<div>
  <!-- prosemirror type 'script' skipped -->
</div>"
`;
